# CMakeLearn

./: .gitignore
add_custom_target/: CMakeLists.txt  custom.txt
file/: CMakeLists.txt
get_filename_component/: CMakeLists.txt
install/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
install/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  HelloWorldGlobal.h
install/MyExe/: CMakeLists.txt  main.cpp
